--- a/style.css
+++ b/style.css
@@ -152,24 +152,24 @@ html,body{
     position: absolute;
 }
 #about {
-    width: 100%;
-    min-height: 100vh;
-    height: auto;
+    padding: 5vw;
+    background: var(--bg-primary);
     display: flex;
-    align-items: flex-start;
     justify-content: center;
+    align-items: flex-start;
+    min-height: 100vh;
+    margin-top: 30vh;
+    width: 100%;
     color: #ffffff;
-    padding: 15vw 10vw;
-    background-color: black;
 }
 
 .about-container {
     display: flex;
-    align-items: flex-start;
-    gap: 50px;
+    gap: 2rem;
     max-width: 1200px;
     width: 100%;
     padding-top: 20px;
+    margin-top: 0;
 }
 
 .about-left {
@@ -206,7 +206,7 @@ html,body{
     text-transform: uppercase;
     opacity: .6;
     margin-bottom: 10px;
-    font-size: 1vw;
+    font-size: 3vw;
 }
 
 #about img{
@@ -437,6 +437,9 @@ html,body{
 
 /* Projects Section */
 #projects {
+    margin-top: -30px;
+    padding: 5vw;
+    background: var(--bg-secondary);
     width: 100%;
     min-height: 100vh;
     height: auto;
@@ -445,15 +448,13 @@ html,body{
     align-items: center;
     justify-content: center;
     color: #ffffff;
-    padding: 10vw;
-    background-color: black;
 }
 
 #projects h5 {
     text-transform: uppercase;
     opacity: .6;
     margin-bottom: 50px;
-    font-size: 1vw;
+    font-size: 3vw;
 }
 
 .projects-grid {
